opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Hennequin Lab" ]
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "1.1.0"}
  "base-unix"
  "owl" {>= "0.6.0"}
]
synopsis: "Differentiable ODE solvers / generative models"
